--- a/Rules
+++ b/Rules
@@ -1,24 +1,37 @@
 #!/usr/bin/env ruby
 
+require 'compass'
+Compass.add_project_configuration 'config.rb'
+
 compile '/**/*.html' do
-  layout '/default.*'
+	layout '/default.*'
 end
 
 compile '/**/*.md' do
-  filter :kramdown
-  layout '/default.*'
+	filter :kramdown
+	layout '/default.*'
+end
+
+compile '/**/*.scss' do
+	filter :sass, Compass.sass_engine_options.merge(syntax: :scss)
 end
 
 route '/**/*.{html,md}' do
-  if item.identifier =~ '/index.*'
-    '/index.html'
-  else
-    item.identifier.without_ext + '/index.html'
-  end
+	if item.identifier =~ '/index.*'
+		'/index.html'
+	else
+		item.identifier.without_ext + '/index.html'
+	end
+end
+
+route '/**/*.scss' do
+	unless item.identifier.without_ext.start_with? '_'
+		item.identifier.without_ext + '.css'
+	end
 end
 
 compile '/**/*' do
-  write item.identifier.to_s
+	write item.identifier.to_s
 end
 
 layout '/**/*', :erb
