--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -13,6 +13,9 @@ text_extensions: [ 'adoc', 'asciidoc', 'atom', 'coffee', 'css', 'erb', 'haml', '
 # relative to the site directory.
 output_dir: output
 
+# The URL to the site, without trailing slash.
+base_url: 'http://help.avem.es'
+
 # A list of index filenames, i.e. names of files that will be served by a web
 # server when a directory is requested. Usually, index files are named
 # “index.html”, but depending on the web server, this may be something else,
