--- a/Rules
+++ b/Rules
@@ -6,6 +6,11 @@ Dotenv.load
 require 'compass'
 Compass.add_project_configuration 'config.rb'
 
+compile '/sitemap.xml' do
+	filter :erb
+	write '/sitemap.xml'
+end
+
 compile '/index.html' do
 	filter :erb
 	layout '/content.html'
@@ -15,7 +20,7 @@ route '/index.html' do
 	item.identifier.to_s
 end
 
-compile '/**/*.php' do
+compile '/search.php' do
 	filter :erb
 end
 
@@ -41,11 +46,6 @@ route '/categories/*' do
 	category_link(item) + '/index.html'
 end
 
-compile '/**/*.php' do
-	filter :erb
-	write item.identifier.to_s
-end
-
 compile '/**/*.html' do
 	filter :erb
 	layout '/default.*'
@@ -57,6 +57,11 @@ route '/**/*.html' do
 	else
 		item.identifier.without_ext + '/index.html'
 	end
+end
+
+compile '/**/*.php' do
+	filter :erb
+	write item.identifier.to_s
 end
 
 ignore '/styles/**/_*.scss'
